--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
     <canvas class="background" style="position: fixed; z-index: 1; pointer-events: none;"></canvas>
     <!-- Move to up bottom -->
     <div class="scroll-button">
-        <a onClick="navTo('home')"><i class="fa fa-arrow-up contact-title"></i></a>
+        <a onclick="navTo('home')"><i class="fa fa-arrow-up contact-title"></i></a>
     </div>
     <!-- navigation menu -->
     <nav>
         <div class="navbar">
             <div class="logo"><a href="#">Portfolio</a></div>
             <ul class="menu">
-                <li class= "li"><a href="#home">Home</a></li>
-                <li class= "li"><a href="#about">About</a></li>
-                <li class= "li"><a href="#skills">Skills</a></li>
-                <li class= "li"><a href="#services">Services</a></li>
-                <li class= "li"><a href="#myworks">Portfolio</a></li>
-                <li class= "li"><a href="#contact">Contact</a></li>
+                <li class= "li"><a onclick="navTo('home')">Home</a></li>
+                <li class= "li"><a onclick="navTo('about')">About</a></li>
+                <li class= "li"><a onclick="navTo('skills')">Skills</a></li>
+                <li class= "li"><a onclick="navTo('services')">Services</a></li>
+                <li class= "li"><a onclick="navTo('myworks')">Portfolio</a></li>
+                <li class= "li"><a onclick="navTo('contact')">Contact</a></li>
                 <div class="cancel-btn">
                     <i class="fa fa-times"></i>
                 </div>
