--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/threejs/r84/three.min.js"></script>
 </head>
 <body>
     <canvas class="background" style="position: fixed; z-index: 1; pointer-events: none;"></canvas>
@@ -26,7 +27,7 @@
     </div>
     <!-- navigation menu -->
     <nav>
-        <div class="navbar">
+        <div class="navbar">            
             <div class="logo"><a href="#">Portfolio</a></div>
             <ul class="menu">
                 <li class= "li"><a onclick="navTo('home')">Home</a></li>
