--- a/index.html
+++ b/index.html
@@ -202,13 +202,13 @@
                 </h2>
                 <p>
                     9 years of experience in Web development. <br/>
+                    - Strong HTML + CSS, SCSS, Tailwind CSS, TypeScript<br/>
                     - Node.js, express, hapi, Nest<br/>
                     - React, Redux, React Hooks, Next, React Native<br/>
                     - Apollo, GraphQL, Firebase<br/>
                     - MongoDB, mongoose, postgreSQL, MySQL<br/>
                     - codeigniter, Laravel<br/>
                     - Responsive Web design<br/>
-                    - Strong HTML + CSS, SCSS, Tailwind CSS<br/>
                     - Chrome extension, bot development with NodeJS and Python<br/>
                     - Restful, API integration, headless<br/>
                     - Socket programming, socket.io, websocket<br/>
@@ -338,13 +338,13 @@
             <a class="popupimg" href="./assets/images/portfolio/accounting.png" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/accounting.png">
             </a>
-            <div class="overlay"><a href="https://www.accointing.com/" target="_blank" class="imageLink" title="https://www.accointing.com/">React + Next</a></div>
+            <div class="overlay"><a href="https://www.accointing.com/" target="_blank" class="imageLink" title="https://www.accointing.com/">React + Next + TypeScript</a></div>
         </div>
 		<div class="grid-item" data-filter="website">
             <a class="popupimg" href="./assets/images/portfolio/bluejestic.png" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/bluejestic.png">
             </a>
-            <div class="overlay"><a href="https://bluejestic.com/" target="_blank" class="imageLink" title="https://bluejestic.com/">React + Next + TailwindCSS</a></div>
+            <div class="overlay"><a href="https://bluejestic.com/" target="_blank" class="imageLink" title="https://bluejestic.com/">Next + TypeScript + TailwindCSS</a></div>
         </div>
 		<div class="grid-item" data-filter="blockchain">
             <a class="popupimg" href="./assets/images/portfolio/colexion.png" target="_blank">
