--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
             </div>
             <div class="w3-col l4  w3-dark-grey">
                 <p><i class="fa fa-github w3-xxlarge w3-text-light-grey"></i></p>
-                <p><a href="https://github.com/perfectdev000" target="_blank" title="https://github.com/perfectdev000" style="text-decoration: underline;"> Git Hub </a></p>
+                <p><a href="https://github.com/FantasticFullStackDev" target="_blank" title="https://github.com/FantasticFullStackDev" style="text-decoration: underline;"> Git Hub </a></p>
             </div>
             <div class="w3-col l4">
                 <p><i class="fa fa-telegram w3-xxlarge w3-text-light-grey"></i></p>
