animation skillset updated

--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@
                     <p>
                         I'm very proficient in Web Animation development as I have got an artistic eye for design.<br/>
                         - Pure CSS animation<br/>
-                        - GSAP animation and parallx scroll animation<br/>
+                        - 3D Animation with Three.js and WebGL<br/>
                         - Graphic animation with Canvas<br/>
                         - SVG graphic animation design<br/>
-                        - 3D Animation with Three.js and WebGL<br/>
+                        - parallx scroll animation<br/>
                         - ParticlesJS, GreenSockJS and so on.
                     </p>
                     <a onClick="showWork('animation')" title="Web Animations">View Work</a>
