--- a/index.html
+++ b/index.html
@@ -353,6 +353,12 @@
             </a>
             <div class="overlay"><a href="https://colexion.io/" target="_blank" class="imageLink" title="https://colexion.io/">React + NodeJS + Web3</a></div>
         </div>
+		<div class="grid-item" data-filter="blockchain">
+            <a class="popupimg" href="./assets/images/portfolio/everburn.png" target="_blank">
+                <img class="lazy" data-src="./assets/images/portfolio/everburn.png">
+            </a>
+            <div class="overlay"><a href="https://everburn.io/" target="_blank" class="imageLink" title="https://everburn.io/">React + Web3 + Solidity</a></div>
+        </div>
 		<div class="grid-item" data-filter="website">
             <a class="popupimg" href="./assets/images/portfolio/graphicrhino.png" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/graphicrhino.png">
