--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <hr/>
     <div class="w3-container w3-padding-large" style="position: relative; z-index: 2;">
         <div id="about"style="margin-top: -100px; height: 170px;"></div>
-        <div class="w3-col l5" style="display: flex; justify-content: center;">
+        <div class="w3-col l5" style="display: flex; justify-content: center; opacity: 0.8;">
             <img data-src="./assets/images/me.png" class="avatar lazy" style="min-height: 300px; min-width: 300px; margin: 10px;"/>
         </div>
         <div class="w3-col l7 description">
@@ -338,7 +338,7 @@
             <li><a href="javascript:void(0);" data-filter="blockchain" id="blockchain">Blockchain</a></li>
         </ul>
     </div>
-	<div id="container" class="isotope" style=" position: relative; z-index: 2;">    
+	<div id="container" class="isotope" style=" position: relative; z-index: 2; opacity: 0.8">    
 		<div class="grid-item" data-filter="website">
             <a class="popupimg" href="./assets/images/portfolio/accounting.png" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/accounting.png">
