--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <img data-src="./assets/images/me.png" class="avatar lazy" style="min-height: 300px; min-width: 300px; margin: 10px;"/>
         </div>
         <div class="w3-col l7 description">
-           <h3>A full stack web developer who has got deep experience of web design and development with Node.js.
+           <h3>A full stack developer who has got deep experience of web design, development and Blockchain Projects.
             Ready to take any kind of challenges in any situation.
             Always make sure of the quick turnaround of my job as I never disappoint any of my clients.
             Expert enough to manage any kind of job environment by coming up with my multitasking expertise.
@@ -283,6 +283,7 @@
                         - Smart Contract, Solidity, Rust<br/>
                         - Ethereum, Solana<br/>
                         - NFT mint, NFT marketplace<br/>
+                        - Discord & Telegram NFT Bot<br/>
                         - Binance, Cryptocurrency<br/>
                     </p>
                     <a onClick="showWork('blockchain')" title="Blockchain Development">View Work</a>
