--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                             </svg>
                             </div>
                             <p>Web & Mobile Frontend Development, Smart Contract ABI integration, 2D & 3D Animation Development</p>
-                            <div class="serv-price-wrap"><span>Price</span>$25 - $35</div>
+                            <div class="serv-price-wrap">$25 - $35</div>
                         </div>
                         </div>
                     </div>
@@ -391,7 +391,7 @@
                                 </svg>
                                 </div>
                                 <p>NodeJS & PHP Backend Development, SQL & NoSQL Database Design and Optimization, Telegram & Discord Bot Development</p>
-                                <div class="serv-price-wrap"><span>Price</span>$30 - $45</div>
+                                <div class="serv-price-wrap">$30 - $45</div>
                             </div>
                         </div>
                     </div>
@@ -431,7 +431,7 @@
                                 </svg>
                                 </div>
                                 <p>Ethereum * Solana Blockchain Network, Smart Contract Development with Solidity and Rust, NFT minting & marketplace development, Trading & NFT Bot Development</p>
-                                <div class="serv-price-wrap"><span>Price</span>$225-$1300</div>
+                                <div class="serv-price-wrap">$40-$50</div>
                             </div>
                         </div>
                     </div>
