--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
     <canvas id="c" style="background: transparent;"></canvas>  
     <!-- /ThreeJS Model -->
     <!-- Clouds and Starts -->
-    <div class="clouds"></div>
+    <div class="clouds" style="z-index: 1;"></div>
     <!-- /Clouds and Starts -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.2/isotope.pkgd.min.js'></script>    
