--- a/index.html
+++ b/index.html
@@ -639,8 +639,8 @@
     </button>
     <!-- /Button -->
     <!-- ThreeJS Model -->
-    <div class="loading" id="js-loader"><div class="loader"></div></div>
-    <canvas id="c" style="background: transparent;"></canvas>  
+    <!-- <div class="loading" id="js-loader"><div class="loader"></div></div>
+    <canvas id="c" style="background: transparent;"></canvas>   -->
     <!-- /ThreeJS Model -->
     <!-- Clouds and Starts -->
     <div class="clouds" style="z-index: 1;"></div>
