--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./assets/css/pricing.css">
     <link rel="stylesheet" href="./assets/css/cloud_stars.css">
+    <link rel="stylesheet" href="./assets/css/pokermon.css">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Parisienne&display=swap" rel="stylesheet">
@@ -564,11 +565,23 @@
 	</div>
     
     <div class="isotope-pager" style="padding-top: 15px; text-align:center; position: relative; z-index: 3;"></div>
-    
+
+    <!-- POKEMON START -->
+    <main id=app>
+        <section class="cards">
+        <div class="card charizard animated"></div>
+        <div class="card pika animated"></div>
+        <div class="card eevee animated"></div>
+        <div class="card mewtwo animated"></div>
+        </section>     
+        <style class="hover"></style>    
+    </main>
+    <!-- POKEMON END -->
+
     <!-- Contact Section -->
     <div class="w3-container w3-padding-large contact" style=" position: relative; z-index: 2;">
         <div id="contact" style="margin-top: -100px; height: 100px;"></div>
-        <div id="container">
+        <div id="container" style="display: flex;">
             <span id="text1"></span>
             <span id="text2"></span>
         </div>
@@ -627,6 +640,7 @@
             </div>
         </div>
     </div>
+
     <!-- footer -->
     <div class="footer" style=" position: relative; z-index: 2;">
         <p class="contact-title"> &copy; Last Updated On Jan 1 2022 </p>
@@ -653,5 +667,6 @@
     <script src="./assets/js/scrollBtn.js"></script>
     <script src="./assets/js/threemodel.js"></script>
     <script src="./assets/js/pricing.js"></script>
+    <script src="./assets/js/pokemon.js"></script>
 </body>
 </html>
