--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src='https://cdn.jsdelivr.net/gh/mrdoob/Three.js@r92/examples/js/loaders/GLTFLoader.js'></script>
 </head>
 <body>
-    <canvas class="background" style="position: fixed; z-index: 1; pointer-events: none;"></canvas>
+    <canvas class="background" style="position: fixed !important; z-index: 1; pointer-events: none;"></canvas>
     <!-- Move to up bottom -->
     <!-- <div class="scroll-button" style="display: none;">
         <a onclick="navTo('home')"><i class="fa fa-arrow-up contact-title"></i></a>
@@ -94,6 +94,7 @@
         </div>
     </section>
     <hr/>
+    <br/><br/>
     <div class="w3-container w3-padding-large" style="position: relative; z-index: 2;">
         <div id="about"style="margin-top: -100px; height: 170px;"></div>
         <div class="w3-col l5" style="display: flex; justify-content: center; opacity: 0.9;">
@@ -109,7 +110,7 @@
             Committed to the clients and always focus on their respectable needs.
             Work with 100% client's satisfaction.</h3>
         </div>
-    </div>
+    </div><br/><br/>
     <!-- My Skill Section -->
     <!-- <h1 id="myskills" class="subtitle"> My Skills & Services </h1> -->
     <section class="skills" style="padding-top: 0px; position: relative; z-index: 2;">
