--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
                         I have been working as a Blockchain developer for 4 years.<br/>
                         Mostly work as a Blockchain Fronend Developer.<br/>
                         - React + Web3JS, React + EthersJS<br/>
+                        - React + Solana/web3<br/>
                         - Smart Contract, Solidity, Rust<br/>
                         - Ethereum, Solana<br/>
                         - NFT mint, NFT marketplace<br/>
@@ -471,7 +472,19 @@
             <li><a href="javascript:void(0);" data-filter="blockchain" id="blockchain">Blockchain</a></li>
         </ul>
     </div>
-	<div id="container" class="isotope" style=" position: relative; z-index: 2; opacity: 0.9;">    
+	<div id="container" class="isotope" style=" position: relative; z-index: 2; opacity: 0.9;">  
+		<div class="grid-item" data-filter="blockchain">
+            <a class="popupimg" href="./assets/images/portfolio/Soleye.png" target="_blank">
+                <img class="lazy" data-src="./assets/images/portfolio/Soleye.png">
+            </a>
+            <div class="_overlay"><a href="https://soleye.xyz/" target="_blank" class="imageLink" title="https://soleye.xyz/">React + NodeJS + Solana</a></div>
+        </div>
+		<div class="grid-item" data-filter="blockchain">
+            <a class="popupimg" href="./assets/images/portfolio/soleye-bot.png" target="_blank">
+                <img class="lazy" data-src="./assets/images/portfolio/soleye-bot.png">
+            </a>
+            <div class="_overlay"><a href="https://discord.gg/Fy9fgVRC" target="_blank" class="imageLink" title="Solana Rarity NFT Discord Bot">NodeJS + DiscordJS + Solana</a></div>
+        </div>  
 		<div class="grid-item" data-filter="website">
             <a class="popupimg" href="./assets/images/portfolio/accounting.png" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/accounting.png">
@@ -648,7 +661,7 @@
     </div>
 
     <!-- Button -->
-    <button class="scroll-btn" style="z-index: 10;">
+    <button class="scroll-btn" style="z-index: 10; outline: 0px !important;">
         <span class="scroll-btn__sign">Scroll Down</span>
         <span class="scroll-btn__arrow"></span>
     </button>
