--- a/index.html
+++ b/index.html
@@ -474,109 +474,109 @@
     </div>
 	<div id="container" class="isotope" style=" position: relative; z-index: 2; opacity: 0.9;">  
 		<div class="grid-item" data-filter="blockchain">
-            <a class="popupimg" href="./assets/images/portfolio/Soleye.png" target="_blank">
+            <a class="popupimg" href="https://soleye.xyz/" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/Soleye.png">
             </a>
             <div class="_overlay"><a href="https://soleye.xyz/" target="_blank" class="imageLink" title="https://soleye.xyz/">React + NodeJS + Solana</a></div>
         </div>
 		<div class="grid-item" data-filter="blockchain">
-            <a class="popupimg" href="./assets/images/portfolio/soleye-bot.png" target="_blank">
+            <a class="popupimg" href="https://discord.gg/Fy9fgVRC" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/soleye-bot.png">
             </a>
             <div class="_overlay"><a href="https://discord.gg/Fy9fgVRC" target="_blank" class="imageLink" title="Solana Rarity NFT Discord Bot">NodeJS + DiscordJS + Solana</a></div>
         </div>  
 		<div class="grid-item" data-filter="website">
-            <a class="popupimg" href="./assets/images/portfolio/lolcca.png" target="_blank">
+            <a class="popupimg" href="https://lolcca.com/" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/lolcca.png">
             </a>
             <div class="_overlay"><a href="https://lolcca.com/" target="_blank" class="imageLink" title="https://lolcca.com/">MERN stack</a></div>
         </div>
 		<div class="grid-item" data-filter="website">
-            <a class="popupimg" href="./assets/images/portfolio/accounting.png" target="_blank">
+            <a class="popupimg" href="https://www.accointing.com/" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/accounting.png">
             </a>
             <div class="_overlay"><a href="https://www.accointing.com/" target="_blank" class="imageLink" title="https://www.accointing.com/">React + Next + TypeScript</a></div>
         </div>
 		<div class="grid-item" data-filter="website">
-            <a class="popupimg" href="./assets/images/portfolio/bluejestic.png" target="_blank">
+            <a class="popupimg" href="https://bluejestic.com/" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/bluejestic.png">
             </a>
             <div class="_overlay"><a href="https://bluejestic.com/" target="_blank" class="imageLink" title="https://bluejestic.com/">Next + TypeScript + TailwindCSS</a></div>
         </div>
 		<div class="grid-item" data-filter="blockchain">
-            <a class="popupimg" href="./assets/images/portfolio/colexion.png" target="_blank">
+            <a class="popupimg" href="https://colexion.io/" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/colexion.png">
             </a>
             <div class="_overlay"><a href="https://colexion.io/" target="_blank" class="imageLink" title="https://colexion.io/">React + NodeJS + Web3</a></div>
         </div>
 		<div class="grid-item" data-filter="blockchain">
-            <a class="popupimg" href="./assets/images/portfolio/everburn.png" target="_blank">
+            <a class="popupimg" href="https://everburn.io/" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/everburn.png">
             </a>
             <div class="_overlay"><a href="https://everburn.io/" target="_blank" class="imageLink" title="https://everburn.io/">React + Web3 + Solidity</a></div>
         </div>
 		<div class="grid-item" data-filter="website">
-            <a class="popupimg" href="./assets/images/portfolio/graphicrhino.png" target="_blank">
+            <a class="popupimg" href="https://graphicrhino.be" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/graphicrhino.png">
             </a>
             <div class="_overlay"><a href="https://graphicrhino.be" target="_blank" class="imageLink" title="https://graphicrhino.be">React Hooks + SCSS</a></div>
         </div>
 		<div class="grid-item" data-filter="website">
-            <a class="popupimg" href="./assets/images/portfolio/hugeinc.png" target="_blank">
+            <a class="popupimg" href="https://www.hugeinc.com/" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/hugeinc.png">
             </a>
             <div class="_overlay"><a href="https://www.hugeinc.com/" target="_blank" class="imageLink" title="https://www.hugeinc.com/">MERN stack</a></div>
         </div>
 		<div class="grid-item" data-filter="website">
-            <a class="popupimg" href="./assets/images/portfolio/mazda.png" target="_blank">
+            <a class="popupimg" href="https://www.mazda.com.au" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/mazda.png">
             </a>
             <div class="_overlay"><a href="https://www.mazda.com.au/" target="_blank" class="imageLink" title="https://www.mazda.com.au/">React + Redux + SCSS</a></div>
         </div>
 		<div class="grid-item" data-filter="blockchain">
-            <a class="popupimg" href="./assets/images/portfolio/mercafantasy.png" target="_blank">
+            <a class="popupimg" href="https://mercafantasy.com/" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/mercafantasy.png">
             </a>
             <div class="_overlay"><a href="https://mercafantasy.com/" target="_blank" class="imageLink" title="https://mercafantasy.com/"> ParticleJS + Web3</a></div>
         </div>
 		<div class="grid-item" data-filter="website">
-            <a class="popupimg" href="./assets/images/portfolio/momnpop.png" target="_blank">
+            <a class="popupimg" href="https://test.momnpophub.com/" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/momnpop.png">
             </a>
             <div class="_overlay"><a href="https://test.momnpophub.com/" target="_blank" class="imageLink" title="https://test.momnpophub.com/">MERN stack</a></div>
         </div>
 		<div class="grid-item" data-filter="animation">
-            <a class="popupimg" href="./assets/images/portfolio/motelycrowd.png" target="_blank">
+            <a class="popupimg" href="https://www.motleycrowd.live/" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/motelycrowd.png">
             </a>
             <div class="_overlay"><a href="https://www.motleycrowd.live/" target="_blank" class="imageLink" title="https://www.motleycrowd.live/">React + Next + ThreeJS</a></div>
         </div>
 		<div class="grid-item" data-filter="website">
-            <a class="popupimg" href="./assets/images/portfolio/patternbrands.png" target="_blank">
+            <a class="popupimg" href="https://www.patternbrands.com/" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/patternbrands.png">
             </a>
             <div class="_overlay"><a href="https://www.patternbrands.com/" target="_blank" class="imageLink" title="https://www.patternbrands.com/">React + Styled Component</a></div>
         </div>
 		<div class="grid-item" data-filter="animation">
-            <a class="popupimg" href="./assets/images/portfolio/shop_qcterme.png" target="_blank">
+            <a class="popupimg" href="https://shop.qcterme.com/" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/shop_qcterme.png">
             </a>
             <div class="_overlay"><a href="https://shop.qcterme.com/" target="_blank" class="imageLink" title="https://shop.qcterme.com/">React + GSAP</a></div>
         </div>
 		<div class="grid-item" data-filter="blockchain">
-            <a class="popupimg" href="./assets/images/portfolio/solsnatcher.png" target="_blank">
+            <a class="popupimg" href="https://solsnatchers.com/" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/solsnatcher.png">
             </a>
             <div class="_overlay"><a href="https://solsnatchers.com/" target="_blank" class="imageLink" title="https://solsnatchers.com/">HTML + Bootstrap + JQuery</a></div>
         </div>
 		<div class="grid-item" data-filter="website">
-            <a class="popupimg" href="./assets/images/portfolio/strv.png" target="_blank">
+            <a class="popupimg" href="https://www.strv.com/" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/strv.png">
             </a>
             <div class="_overlay"><a href="https://www.strv.com/" target="_blank" class="imageLink" title="https://www.strv.com/">React + Next + Express</a></div>
         </div>
 		<div class="grid-item" data-filter="animation">
-            <a class="popupimg" href="./assets/images/portfolio/ueno.png" target="_blank">
+            <a class="popupimg" href="https://interview.ueno.co/" target="_blank">
                 <img class="lazy" data-src="./assets/images/portfolio/ueno.png">
             </a>
             <div class="_overlay"><a href="https://interview.ueno.co/" target="_blank" class="imageLink" title="https://interview.ueno.co/">React + ThreeJS</a></div>
