--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
                 </div>
                 <div class="box circle">
                     <div class="topic">Blockchain</div>
-                    <div class="orange">
+                    <div class="green">
                         <div class="progress"  style="background: transparent;">
                             <div class="inner">
-                                <div class="percent"><span>&nbsp;&nbsp;70</span>%</div>
+                                <div class="percent"><span>&nbsp;&nbsp;95</span>%</div>
                                 <div class="water"></div>
                                 <div class="glare"></div>
                             </div>
