--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="w3-container w3-padding-large" style="position: relative; z-index: 2;">
         <div id="about"style="margin-top: -100px; height: 170px;"></div>
         <div class="w3-col l5" style="display: flex; justify-content: center; opacity: 0.9;">
-            <img data-src="./assets/images/me.png" class="avatar lazy" style="min-height: 300px; min-width: 300px; margin: 10px;"/>
+            <img data-src="./assets/images/avatar.png" class="avatar lazy" style="min-height: 300px; min-width: 300px; margin: 10px; border-radius: 50%;"/>
         </div>
         <div class="w3-col l7 description">
            <h3>A full stack developer who has got deep experience of web design, development and Blockchain Projects.
@@ -200,10 +200,10 @@
                 </div>
                 <div class="box circle">
                     <div class="topic">Blockchain</div>
-                    <div class="green">
+                    <div class="red">
                         <div class="progress"  style="background: transparent;">
                             <div class="inner">
-                                <div class="percent"><span>&nbsp;&nbsp;95</span>%</div>
+                                <div class="percent"><span>&nbsp;&nbsp;35</span>%</div>
                                 <div class="water"></div>
                                 <div class="glare"></div>
                             </div>
@@ -224,7 +224,7 @@
                     <span>W</span><span>e</span><span>b</span><span>&nbsp;</span><span>D</span><span>e</span><span>v</span><span>e</span><span>l</span><span>o</span><span>p</span><span>m</span><span>e</span><span>n</span><span>t</span>
                 </h2>
                 <p>
-                    9 years of experience in Web development. <br/>
+                    Fully experienced in Web development. <br/>
                     - Strong HTML + CSS, SCSS, Tailwind CSS, TypeScript<br/>
                     - Node.js, express, hapi, Nest<br/>
                     - React, Redux, React Hooks, Next, React Native<br/>
@@ -368,7 +368,7 @@
                             </svg>
                             </div>
                             <p>Web & Mobile Frontend Development, Smart Contract ABI integration, 2D & 3D Animation Development</p>
-                            <div class="serv-price-wrap">$25 - $35</div>
+                            <div class="serv-price-wrap">$35 - $45</div>
                         </div>
                         </div>
                     </div>
@@ -408,7 +408,7 @@
                                 </svg>
                                 </div>
                                 <p>NodeJS Backend Development, Database Design and Optimization, Telegram & Discord Bot</p>
-                                <div class="serv-price-wrap">$30 - $45</div>
+                                <div class="serv-price-wrap">$40 - $50</div>
                             </div>
                         </div>
                     </div>
@@ -448,7 +448,7 @@
                                     </svg>
                                 </div>
                                 <p>Ethereum & Solana, Solidity and Rust, NFT minting & marketplace, Trading & NFT Bot</p>
-                                <div class="serv-price-wrap">$40 - $50</div>
+                                <div class="serv-price-wrap">$50 - $60</div>
                             </div>
                         </div>
                     </div>
