--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
             </div>
             <div class="w3-col l4">
                 <p><i class="fa fa-telegram w3-xxlarge w3-text-light-grey"></i></p>
-                <p><a href="https://t.me/WebDevNinja" target="_blank" title="https://t.me/WebDevNinja" style="text-decoration: underline; color: white;"> Telegram </a></p>
+                <p><a href="https://t.me/WebDevNinja" target="_blank" title="https://t.me/WebDevNinja" style="text-decoration: underline; color: white;"> @WebDevNinja </a></p>
             </div>
             <div class="w3-col l4  w3-dark-grey">
                 <p><i class="fa fa-skype w3-xxlarge w3-text-light-grey"></i></p>
@@ -669,7 +669,7 @@
                     219.1c29.67 0 53.31 26.82 52.84 59.24C470.7 310.1 447.5 337.6 417.9 337.6z"></path>
                 </svg>
             </p>
-                <p><a href="https://discord.gg/WZKJTNJE" target="_blank" title="https://discord.gg/WZKJTNJE" style="text-decoration: underline; color: white;"> Discord </a></p>
+                <p><a href="https://discord.gg/WZKJTNJE" target="_blank" title="https://discord.gg/WZKJTNJE" style="text-decoration: underline; color: white;"> JIN#6019 </a></p>
             </div>
         </div>
     </div>
