avatar is updated

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="w3-container w3-padding-large" style="position: relative; z-index: 2;">
         <div id="about"style="margin-top: -100px; height: 170px;"></div>
         <div class="w3-col l5" style="display: flex; justify-content: center; opacity: 0.9;">
-            <img data-src="./assets/images/avatar1.jpg" class="avatar lazy" style="min-height: 300px; min-width: 300px; margin: 10px; border-radius: 50%;"/>
+            <img data-src="./assets/images/me.jpg" class="avatar lazy" style="min-height: 300px; min-width: 300px; margin: 10px; border-radius: 50%;"/>
         </div>
         <div class="w3-col l7 description">
            <h3>A full stack developer who has got deep experience of web design, development and Blockchain Projects.
