--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
     <!-- POKEMON END -->
 
     <!-- Contact Section -->
-    <div class="w3-container w3-padding-large contact" style=" position: relative; z-index: 2;">
+    <!-- <div class="w3-container w3-padding-large contact" style=" position: relative; z-index: 2;">
         <div id="contact" style="margin-top: -100px; height: 100px;"></div>
         <div id="container" style="display: flex;">
             <span id="text1"></span>
@@ -657,10 +657,10 @@
                     219.1c29.67 0 53.31 26.82 52.84 59.24C470.7 310.1 447.5 337.6 417.9 337.6z"></path>
                 </svg>
             </p>
-                <p><a href="https://discord.gg/WZKJTNJE" target="_blank" title="https://discord.gg/WZKJTNJE" style="text-decoration: underline; color: white;"> JIN#6019 </a></p>
+                <p>FlashDevNinja#6019</p>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- footer -->
     <div class="footer" style=" position: relative; z-index: 2;">
