--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlashDevNinja </title>
+    <meta name="description" content="Sr React & NodeJS developer">
+    <meta name="keywords" content="Jin Wang, React, react, Frontend, frontend, NodeJS, TailwindCSS, tailwindcss">
+    <meta name="author" content="Jin Wang">
+    <title>Jin Wang</title>
     <link rel="shortcut icon" href="./assets/images/logo.png">
     <link rel="stylesheet" href="./assets/css/hero.css">
     <link rel="stylesheet" href="./assets/css/portfolio.css">
@@ -49,7 +52,7 @@
     <!-- navigation menu -->
     <nav style="width: 100%; position: fixed; z-index: 300;">
         <div class="navbar">            
-            <div class="logo"><a href="#">Portfolio</a></div>
+            <div class="logo"><a href="#">Jin Wang</a></div>
             <ul class="menu" style='margin-bottom: 0px;'>
                 <li class= "li"><a onclick="navTo('home')">Home</a></li>
                 <li class= "li"><a onclick="navTo('about')">About</a></li>
