--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="w3-container w3-padding-large" style="position: relative; z-index: 2;">
         <div id="about" style="margin-top: -100px; height: 170px;"></div>
         <div class="w3-col l5" style="display: flex; justify-content: center; opacity: 0.9;">
-            <img data-src="./assets/images/me.jpg" class="avatar lazy"
+            <img data-src="./assets/images/avatar.png" class="avatar lazy"
                 style="min-height: 300px; min-width: 300px; margin: 10px; border-radius: 50%;" />
         </div>
         <div class="w3-col l7 description">
@@ -720,8 +720,8 @@
             style="margin:0px; padding: 0px!important; margin-top: -50px;">
             <div class="w3-col l4 w3-dark-grey">
                 <p><i class="fa fa-envelope w3-xxlarge w3-text-light-grey"></i></p>
-                <p><a href="mailTo: jinwangdev531@gmail.com?Subject=I'd like to have a interview with you."
-                        style="text-decoration: underline; color: white;">jinwangdev531@gmail.com</a></p>
+                <p><a href="mailTo: jin.wang97@outlook.com?Subject=I'd like to have a interview with you."
+                        style="text-decoration: underline; color: white;">jin.wang97@outlook.com</a></p>
             </div>
             <div class="w3-col l4">
                 <p><i class="fa fa-clock-o w3-xxlarge w3-text-light-grey"></i></p>
